# pspd-trabalho-1

./: .gitignore  README.md  build.sh  deploy-monitoring.sh  docker-compose.yml  generate_grpc.sh  requirements.txt  run.sh  stop.sh  test_client.py  test_monitoring.py
frontend/: index.html  script.js  style.css
k8s/: deployments.yaml  grafana-dashboard-configmap.yaml  grafana-deployment.yaml  ingress.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-rbac.yaml  services.yaml
proto/: bingo.proto  examples.proto
requests/: draw-number.sh  get-card.sh  mark-number.sh  register-card.sh  register-player.sh
rest_version/: docker-compose.yml  run.sh  stop.sh
rest_version/k8s/: ingress.yaml
rest_version/requests/: create-game.sh  test.sh  validate-number.sh
rest_version/service-a-python/: Dockerfile  game_service.py
rest_version/service-b-python/: Dockerfile  validation_service.py
rest_version/stub-node/: Dockerfile  package.json  server.js
server_cartela/: cartela.proto  cartela_pb2.py  cartela_pb2_grpc.py  requirements.txt  server.py
service-a-python/: Dockerfile  bingo_pb2_grpc.py  game_service.py  requirements.txt
service-b-python/: Dockerfile  bingo_pb2.py  requirements.txt  validation_service.py
stress_test/: Dockerfile  http_test.py
stub-cpp/: CMakeLists.txt  Dockerfile  server.cpp
stub-node/: Dockerfile  helloworld.proto  package-lock.json  package.json  server.js
